tests/cases/should_fail/blocks/unclosed_trait_def.stderr
error: encountered unclosed delimiter `{`, add a `}` after the inner expression
 --> $DIR/unclosed_trait_def.hash:4:1
3 |       merge: (T, T) -> T = () => };
4 |   {;
  |   ^ here
5 |   
